Add buildings and rooms management features to admin dashboard; implement routing for building creation, editing, and viewing, enhance UI components for building and room management, and integrate API methods for building and room operations.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -550,5 +550,103 @@
   "academicDeleteSemesterConfirmText": "This cannot be undone.",
   "academicErrorDeleteSemester": "Delete error ({{status}})",
   "academicErrorLoadSemesters": "Could not load semesters",
-  "academicErrorValidation": "Please check the fields and fix errors."
+  "academicErrorValidation": "Please check the fields and fix errors.",
+  "buildingsTitle": "Buildings & rooms",
+  "buildingsSubtitle": "Manage buildings and classrooms. Click a building to manage its rooms.",
+  "buildingsSearchPlaceholder": "Search by name or address...",
+  "buildingCreate": "Add building",
+  "buildingsNoBuildings": "No buildings",
+  "buildingAdd": "+ Add building",
+  "buildingNameRequired": "Name *",
+  "buildingNamePlaceholder": "e.g. Building A",
+  "buildingAddress": "Address",
+  "buildingAddressPlaceholder": "Optional address",
+  "buildingCreatePageTitle": "Add building",
+  "buildingEditPageTitle": "Edit building",
+  "buildingViewTitle": "Building: {{name}}",
+  "buildingBackToSettings": "Back to system settings",
+  "buildingCreating": "Creating…",
+  "buildingSaving": "Saving…",
+  "buildingErrorNameRequired": "Name is required",
+  "buildingErrorCreate": "Error creating building",
+  "buildingErrorUpdate": "Error updating building",
+  "buildingErrorLoadList": "Could not load buildings",
+  "buildingNotFound": "Building not found",
+  "buildingSuccessDeleted": "Building deleted",
+  "buildingDeleteConfirmTitle": "Delete building?",
+  "buildingDeleteConfirmText": "You can only delete a building that has no rooms. Delete or reassign rooms first.",
+  "buildingErrorDelete": "Delete error ({{status}})",
+  "buildingErrorDeleteHasRooms": "This building has rooms. Delete or reassign them first.",
+  "buildingUpdatedAt": "Updated at",
+  "roomSectionTitle": "Rooms",
+  "roomSectionSubtitle": "Classrooms in this building",
+  "roomAdd": "Add room",
+  "roomBulkAdd": "Bulk add rooms",
+  "roomNoRooms": "No rooms in this building",
+  "roomNumber": "Room number",
+  "roomCapacity": "Capacity",
+  "roomType": "Type",
+  "roomCreateTitle": "Add room",
+  "roomEditTitle": "Edit room",
+  "roomNumberRequired": "Room number *",
+  "roomNumberPlaceholder": "e.g. 101",
+  "roomCapacityPlaceholder": "Optional, e.g. 30",
+  "roomTypePlaceholder": "e.g. Lecture hall",
+  "roomCreating": "Creating…",
+  "roomSaving": "Saving…",
+  "roomErrorNumberRequired": "Room number is required",
+  "roomErrorCapacityMin": "Capacity must be 0 or more",
+  "roomErrorCreate": "Error creating room",
+  "roomErrorUpdate": "Error updating room",
+  "roomErrorDelete": "Delete error ({{status}})",
+  "roomErrorValidation": "Please check the fields and fix errors.",
+  "roomSuccessDeleted": "Room deleted",
+  "roomDeleteConfirmTitle": "Delete room?",
+  "roomDeleteConfirmText": "This action cannot be undone.",
+  "roomBulkTitle": "Bulk add rooms",
+  "roomBulkLabel": "Room numbers (one per line or comma-separated)",
+  "roomBulkHint": "Enter numbers like 101, 102, 201. Capacity and type can be set later by editing each room.",
+  "roomBulkEmpty": "Enter at least one room number.",
+  "roomBulkError": "Error creating rooms. Check that numbers are unique and the building exists.",
+  "roomBulkSuccess": "{{count}} room(s) added.",
+  "timeslotsTitle": "Timeslots",
+  "timeslotsSubtitle": "Time templates shown when creating activities. Add slots to suggest start and end times.",
+  "timeslotManage": "Manage timeslots",
+  "timeslotTimeColumn": "Time",
+  "timeslotAddToEachDay": "Add to each day",
+  "timeslotAddOne": "Add one slot",
+  "timeslotAddOneTitle": "Add timeslot",
+  "timeslotAddOneSuccess": "Timeslot added.",
+  "timeslotDeleteAll": "Delete all slots",
+  "timeslotDeleteAllConfirmTitle": "Delete all timeslots?",
+  "timeslotDeleteAllConfirmText": "All time templates will be removed. Existing lessons keep their times; only the suggestion list is cleared.",
+  "timeslotDeleteAllSuccess": "All timeslots deleted.",
+  "timeslotErrorDeleteAll": "Could not delete all timeslots.",
+  "timeslotSlotDetailTitle": "Timeslot",
+  "timeslotDayLabel": "Day",
+  "timeslotNoSlots": "No slots",
+  "timeslotBulkAdd": "Bulk add timeslots",
+  "timeslotBulkTitle": "Bulk add timeslots",
+  "timeslotBulkHint": "Define slots for one day. They will be created for all seven days (Mon–Sun).",
+  "timeslotStartTime": "Start time",
+  "timeslotEndTime": "End time",
+  "timeslotAddRow": "Add row",
+  "timeslotCreating": "Creating…",
+  "timeslotErrorStartRequired": "Start time is required",
+  "timeslotErrorEndRequired": "End time is required",
+  "timeslotErrorEndAfterStart": "End time must be after start time",
+  "timeslotBulkError": "Error creating timeslots. Check times and try again.",
+  "timeslotBulkSuccess": "{{count}} timeslot(s) created.",
+  "timeslotErrorLoadList": "Could not load timeslots",
+  "timeslotSuccessDeleted": "Timeslot deleted",
+  "timeslotErrorDelete": "Delete error ({{status}})",
+  "timeslotDeleteConfirmTitle": "Delete timeslot?",
+  "timeslotDeleteConfirmText": "This action cannot be undone.",
+  "timeslotDay1": "Monday",
+  "timeslotDay2": "Tuesday",
+  "timeslotDay3": "Wednesday",
+  "timeslotDay4": "Thursday",
+  "timeslotDay5": "Friday",
+  "timeslotDay6": "Saturday",
+  "timeslotDay7": "Sunday"
 }
