--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -550,5 +550,103 @@
   "academicDeleteSemesterConfirmText": "Это действие нельзя отменить.",
   "academicErrorDeleteSemester": "Ошибка удаления ({{status}})",
   "academicErrorLoadSemesters": "Не удалось загрузить семестры",
-  "academicErrorValidation": "Проверьте заполненные поля."
+  "academicErrorValidation": "Проверьте заполненные поля.",
+  "buildingsTitle": "Здания и аудитории",
+  "buildingsSubtitle": "Управление зданиями и классными комнатами. Нажмите на здание, чтобы управлять комнатами.",
+  "buildingsSearchPlaceholder": "Поиск по названию или адресу...",
+  "buildingCreate": "Добавить здание",
+  "buildingsNoBuildings": "Нет зданий",
+  "buildingAdd": "+ Добавить здание",
+  "buildingNameRequired": "Название *",
+  "buildingNamePlaceholder": "напр. Корпус А",
+  "buildingAddress": "Адрес",
+  "buildingAddressPlaceholder": "Необязательно",
+  "buildingCreatePageTitle": "Добавить здание",
+  "buildingEditPageTitle": "Редактировать здание",
+  "buildingViewTitle": "Здание: {{name}}",
+  "buildingBackToSettings": "Назад к настройкам",
+  "buildingCreating": "Создание…",
+  "buildingSaving": "Сохранение…",
+  "buildingErrorNameRequired": "Укажите название",
+  "buildingErrorCreate": "Ошибка создания здания",
+  "buildingErrorUpdate": "Ошибка обновления здания",
+  "buildingErrorLoadList": "Не удалось загрузить здания",
+  "buildingNotFound": "Здание не найдено",
+  "buildingSuccessDeleted": "Здание удалено",
+  "buildingDeleteConfirmTitle": "Удалить здание?",
+  "buildingDeleteConfirmText": "Удалить можно только здание без комнат. Сначала удалите или переназначьте комнаты.",
+  "buildingErrorDelete": "Ошибка удаления ({{status}})",
+  "buildingErrorDeleteHasRooms": "В здании есть комнаты. Сначала удалите или переназначьте их.",
+  "buildingUpdatedAt": "Обновлено",
+  "roomSectionTitle": "Аудитории",
+  "roomSectionSubtitle": "Комнаты в этом здании",
+  "roomAdd": "Добавить комнату",
+  "roomBulkAdd": "Массовое добавление",
+  "roomNoRooms": "В этом здании нет комнат",
+  "roomNumber": "Номер",
+  "roomCapacity": "Вместимость",
+  "roomType": "Тип",
+  "roomCreateTitle": "Добавить комнату",
+  "roomEditTitle": "Редактировать комнату",
+  "roomNumberRequired": "Номер комнаты *",
+  "roomNumberPlaceholder": "напр. 101",
+  "roomCapacityPlaceholder": "Необяз., напр. 30",
+  "roomTypePlaceholder": "напр. Лекционная",
+  "roomCreating": "Создание…",
+  "roomSaving": "Сохранение…",
+  "roomErrorNumberRequired": "Укажите номер комнаты",
+  "roomErrorCapacityMin": "Вместимость не менее 0",
+  "roomErrorCreate": "Ошибка создания комнаты",
+  "roomErrorUpdate": "Ошибка обновления комнаты",
+  "roomErrorDelete": "Ошибка удаления ({{status}})",
+  "roomErrorValidation": "Проверьте заполненные поля.",
+  "roomSuccessDeleted": "Комната удалена",
+  "roomDeleteConfirmTitle": "Удалить комнату?",
+  "roomDeleteConfirmText": "Это действие нельзя отменить.",
+  "roomBulkTitle": "Массовое добавление комнат",
+  "roomBulkLabel": "Номера комнат (по одному на строку или через запятую)",
+  "roomBulkHint": "Введите номера, например 101, 102, 201. Вместимость и тип можно задать позже при редактировании.",
+  "roomBulkEmpty": "Введите хотя бы один номер комнаты.",
+  "roomBulkError": "Ошибка создания комнат. Проверьте, что номера уникальны и здание существует.",
+  "roomBulkSuccess": "Добавлено комнат: {{count}}.",
+  "timeslotsTitle": "Таймслоты",
+  "timeslotsSubtitle": "Шаблоны времени при создании активностей. Добавьте слоты, чтобы подсказывать время начала и окончания.",
+  "timeslotManage": "Управление таймслотами",
+  "timeslotTimeColumn": "Время",
+  "timeslotAddToEachDay": "Добавить на каждый день",
+  "timeslotAddOne": "Добавить один слот",
+  "timeslotAddOneTitle": "Добавить таймслот",
+  "timeslotAddOneSuccess": "Таймслот добавлен.",
+  "timeslotDeleteAll": "Удалить все слоты",
+  "timeslotDeleteAllConfirmTitle": "Удалить все таймслоты?",
+  "timeslotDeleteAllConfirmText": "Все шаблоны времени будут удалены. Занятия сохранят своё время; очищается только список подсказок.",
+  "timeslotDeleteAllSuccess": "Все таймслоты удалены.",
+  "timeslotErrorDeleteAll": "Не удалось удалить все таймслоты.",
+  "timeslotSlotDetailTitle": "Таймслот",
+  "timeslotDayLabel": "День",
+  "timeslotNoSlots": "Нет слотов",
+  "timeslotBulkAdd": "Массовое добавление",
+  "timeslotBulkTitle": "Массовое добавление таймслотов",
+  "timeslotBulkHint": "Опишите слоты для одного дня. Они будут созданы для всех семи дней (пн–вс).",
+  "timeslotStartTime": "Время начала",
+  "timeslotEndTime": "Время окончания",
+  "timeslotAddRow": "Добавить строку",
+  "timeslotCreating": "Создание…",
+  "timeslotErrorStartRequired": "Укажите время начала",
+  "timeslotErrorEndRequired": "Укажите время окончания",
+  "timeslotErrorEndAfterStart": "Время окончания должно быть позже начала",
+  "timeslotBulkError": "Ошибка создания таймслотов. Проверьте время и повторите.",
+  "timeslotBulkSuccess": "Создано таймслотов: {{count}}.",
+  "timeslotErrorLoadList": "Не удалось загрузить таймслоты",
+  "timeslotSuccessDeleted": "Таймслот удалён",
+  "timeslotErrorDelete": "Ошибка удаления ({{status}})",
+  "timeslotDeleteConfirmTitle": "Удалить таймслот?",
+  "timeslotDeleteConfirmText": "Это действие нельзя отменить.",
+  "timeslotDay1": "Понедельник",
+  "timeslotDay2": "Вторник",
+  "timeslotDay3": "Среда",
+  "timeslotDay4": "Четверг",
+  "timeslotDay5": "Пятница",
+  "timeslotDay6": "Суббота",
+  "timeslotDay7": "Воскресенье"
 }
