--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -550,5 +550,103 @@
   "academicDeleteSemesterConfirmText": "此操作不可撤销。",
   "academicErrorDeleteSemester": "删除失败 ({{status}})",
   "academicErrorLoadSemesters": "无法加载学期",
-  "academicErrorValidation": "请检查并修正填写内容。"
+  "academicErrorValidation": "请检查并修正填写内容。",
+  "buildingsTitle": "楼宇与教室",
+  "buildingsSubtitle": "管理楼宇和教室。点击楼宇可管理其教室。",
+  "buildingsSearchPlaceholder": "按名称或地址搜索...",
+  "buildingCreate": "添加楼宇",
+  "buildingsNoBuildings": "暂无楼宇",
+  "buildingAdd": "+ 添加楼宇",
+  "buildingNameRequired": "名称 *",
+  "buildingNamePlaceholder": "如：A 楼",
+  "buildingAddress": "地址",
+  "buildingAddressPlaceholder": "选填",
+  "buildingCreatePageTitle": "添加楼宇",
+  "buildingEditPageTitle": "编辑楼宇",
+  "buildingViewTitle": "楼宇：{{name}}",
+  "buildingBackToSettings": "返回系统设置",
+  "buildingCreating": "创建中…",
+  "buildingSaving": "保存中…",
+  "buildingErrorNameRequired": "请填写名称",
+  "buildingErrorCreate": "创建楼宇失败",
+  "buildingErrorUpdate": "更新楼宇失败",
+  "buildingErrorLoadList": "无法加载楼宇列表",
+  "buildingNotFound": "未找到该楼宇",
+  "buildingSuccessDeleted": "楼宇已删除",
+  "buildingDeleteConfirmTitle": "删除楼宇？",
+  "buildingDeleteConfirmText": "仅当楼宇下无教室时可删除。请先删除或转移教室。",
+  "buildingErrorDelete": "删除失败 ({{status}})",
+  "buildingErrorDeleteHasRooms": "该楼宇下仍有教室，请先删除或转移。",
+  "buildingUpdatedAt": "更新时间",
+  "roomSectionTitle": "教室",
+  "roomSectionSubtitle": "本楼宇下的教室",
+  "roomAdd": "添加教室",
+  "roomBulkAdd": "批量添加",
+  "roomNoRooms": "本楼宇暂无教室",
+  "roomNumber": "教室编号",
+  "roomCapacity": "容纳人数",
+  "roomType": "类型",
+  "roomCreateTitle": "添加教室",
+  "roomEditTitle": "编辑教室",
+  "roomNumberRequired": "教室编号 *",
+  "roomNumberPlaceholder": "如：101",
+  "roomCapacityPlaceholder": "选填，如：30",
+  "roomTypePlaceholder": "如： lecture hall",
+  "roomCreating": "创建中…",
+  "roomSaving": "保存中…",
+  "roomErrorNumberRequired": "请填写教室编号",
+  "roomErrorCapacityMin": "容纳人数不能为负数",
+  "roomErrorCreate": "创建教室失败",
+  "roomErrorUpdate": "更新教室失败",
+  "roomErrorDelete": "删除失败 ({{status}})",
+  "roomErrorValidation": "请检查并修正填写内容。",
+  "roomSuccessDeleted": "教室已删除",
+  "roomDeleteConfirmTitle": "删除教室？",
+  "roomDeleteConfirmText": "此操作不可撤销。",
+  "roomBulkTitle": "批量添加教室",
+  "roomBulkLabel": "教室编号（每行一个或用逗号分隔）",
+  "roomBulkHint": "输入编号如 101、102、201。容纳人数和类型可稍后在编辑中设置。",
+  "roomBulkEmpty": "请至少输入一个教室编号。",
+  "roomBulkError": "创建教室失败。请检查编号是否唯一且楼宇存在。",
+  "roomBulkSuccess": "已添加 {{count}} 间教室。",
+  "timeslotsTitle": "时间段",
+  "timeslotsSubtitle": "创建活动时显示的时间模板。添加时间段以建议开始和结束时间。",
+  "timeslotManage": "管理时间段",
+  "timeslotTimeColumn": "时间",
+  "timeslotAddToEachDay": "为每天添加",
+  "timeslotAddOne": "添加一个时间段",
+  "timeslotAddOneTitle": "添加时间段",
+  "timeslotAddOneSuccess": "时间段已添加。",
+  "timeslotDeleteAll": "删除全部时间段",
+  "timeslotDeleteAllConfirmTitle": "删除所有时间段？",
+  "timeslotDeleteAllConfirmText": "所有时间模板将被删除。已有课程的时间不变，仅清空建议列表。",
+  "timeslotDeleteAllSuccess": "已删除所有时间段。",
+  "timeslotErrorDeleteAll": "无法删除所有时间段。",
+  "timeslotSlotDetailTitle": "时间段",
+  "timeslotDayLabel": "星期",
+  "timeslotNoSlots": "无",
+  "timeslotBulkAdd": "批量添加",
+  "timeslotBulkTitle": "批量添加时间段",
+  "timeslotBulkHint": "为一个工作日定义时间段，将自动为周一至周日创建相同时间段。",
+  "timeslotStartTime": "开始时间",
+  "timeslotEndTime": "结束时间",
+  "timeslotAddRow": "添加一行",
+  "timeslotCreating": "创建中…",
+  "timeslotErrorStartRequired": "请填写开始时间",
+  "timeslotErrorEndRequired": "请填写结束时间",
+  "timeslotErrorEndAfterStart": "结束时间须晚于开始时间",
+  "timeslotBulkError": "创建时间段失败，请检查时间后重试。",
+  "timeslotBulkSuccess": "已创建 {{count}} 个时间段。",
+  "timeslotErrorLoadList": "无法加载时间段",
+  "timeslotSuccessDeleted": "时间段已删除",
+  "timeslotErrorDelete": "删除失败 ({{status}})",
+  "timeslotDeleteConfirmTitle": "删除时间段？",
+  "timeslotDeleteConfirmText": "此操作不可撤销。",
+  "timeslotDay1": "周一",
+  "timeslotDay2": "周二",
+  "timeslotDay3": "周三",
+  "timeslotDay4": "周四",
+  "timeslotDay5": "周五",
+  "timeslotDay6": "周六",
+  "timeslotDay7": "周日"
 }
