Add implementation management features to admin dashboard; implement routing, API integration, and UI components for managing curriculum subjects, offerings, and lesson generation, enhancing user experience and functionality for academic planning.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -648,5 +648,78 @@
   "timeslotDay4": "Thursday",
   "timeslotDay5": "Friday",
   "timeslotDay6": "Saturday",
-  "timeslotDay7": "Sunday"
+  "timeslotDay7": "Sunday",
+
+  "menuImplementation": "Curriculum implementation",
+  "implementationPageTitle": "Curriculum implementation",
+  "implementationSelectGroup": "Group",
+  "implementationSelectGroupPlaceholder": "Select group",
+  "implementationSelectSemester": "Semester",
+  "implementationSelectSemesterPlaceholder": "Select semester",
+  "implementationFilterSemester": "Curriculum semester",
+  "implementationFilterCourse": "Course",
+  "implementationFilterCoursePlaceholder": "Select course",
+  "implementationAllSemesters": "All semesters",
+  "implementationEmptyHint": "Select a group, semester and course to see curriculum subjects and configure implementation.",
+  "implementationDurationWeeks": "Duration, weeks",
+  "implementationStatus": "Implementation",
+  "implementationStatusNone": "No offering",
+  "implementationStatusNoSlots": "No slots",
+  "implementationStatusHasSlots": "Slots configured",
+  "implementationStatusLessonsGenerated": "Lessons generated",
+  "implementationConfigure": "Configure",
+  "implementationOpen": "Open",
+  "implementationOfferingDefaults": "Offering (defaults)",
+  "implementationTeacher": "Teacher",
+  "implementationRoom": "Room",
+  "implementationFormat": "Format",
+  "implementationFormatOffline": "Offline",
+  "implementationFormatOnline": "Online",
+  "implementationFormatMixed": "Mixed",
+  "implementationNotes": "Notes",
+  "implementationOfferingTeachers": "Teachers by role",
+  "implementationOfferingTeachersHint": "Roles: LECTURE, PRACTICE, LAB. SEMINAR uses the main offering teacher.",
+  "implementationAddTeacher": "Add",
+  "implementationRole": "Role",
+  "implementationWeeklySlots": "Weekly slots",
+  "implementationAddSlot": "Add slot",
+  "implementationSlotTime": "Time",
+  "implementationLessonType": "Lesson type",
+  "implementationLessonTypeLecture": "Lecture",
+  "implementationLessonTypePractice": "Practice",
+  "implementationLessonTypeLab": "Lab",
+  "implementationLessonTypeSeminar": "Seminar",
+  "implementationSeminarHint": "SEMINAR: uses the main teacher from the offering.",
+  "implementationSlotTimeMode": "Time specification",
+  "implementationSlotFromTimeslot": "From timeslot",
+  "implementationSlotManual": "Manual",
+  "implementationDayOfWeek": "Day of week",
+  "implementationStartTime": "Start time",
+  "implementationEndTime": "End time",
+  "implementationGenerateLessons": "Generate lessons",
+  "implementationSemesterReadOnly": "Semester",
+  "implementationGenerateButton": "Generate lessons",
+  "implementationRegenerateButton": "Regenerate lessons",
+  "implementationLessonsAlreadyExist": "Lessons for this offering already exist. Click «Regenerate» to replace them.",
+  "implementationGenerateSuccess": "Lessons created: {{count}}",
+  "implementationRegenerateSuccess": "Lessons regenerated: {{count}}",
+  "implementationGenerateAllButton": "Generate all lessons",
+  "implementationGenerateAllSuccess": "Group lessons created: {{count}}",
+  "implementationGenerateAllDisabledHint": "Available when all subjects have slots",
+  "implementationGenerateAllModalTitle": "Generate group lessons",
+  "implementationGenerateAllModalSemester": "Semester",
+  "implementationGenerateAllModalHint": "Lessons will be created only within the selected semester. Each offering must have at least one slot.",
+  "implementationGenerateAllModalSlotsRequired": "Not all subjects have slots. Add at least one weekly slot to each offering.",
+  "implementationNoSlotsError": "Add at least one weekly slot before generating lessons.",
+  "implementationDuplicateOffering": "An offering for this group and subject already exists.",
+  "implementationDuplicateSlot": "A slot with this day, time and type already exists.",
+  "implementationDuplicateTeacherRole": "This teacher with this role is already added.",
+  "implementationSave": "Save",
+  "implementationSaving": "Saving…",
+  "implementationErrorLoadGroups": "Failed to load groups",
+  "implementationErrorLoadSemesters": "Failed to load semesters",
+  "implementationErrorLoadCurriculum": "Failed to load curriculum",
+  "implementationErrorLoadSubjects": "Failed to load curriculum subjects",
+  "implementationErrorLoadOfferings": "Failed to load offerings",
+  "implementationLinkFromGroup": "Implementation"
 }
