--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -648,5 +648,78 @@
   "timeslotDay4": "Четверг",
   "timeslotDay5": "Пятница",
   "timeslotDay6": "Суббота",
-  "timeslotDay7": "Воскресенье"
+  "timeslotDay7": "Воскресенье",
+
+  "menuImplementation": "Реализация учебного плана",
+  "implementationPageTitle": "Реализация учебного плана",
+  "implementationSelectGroup": "Группа",
+  "implementationSelectGroupPlaceholder": "Выберите группу",
+  "implementationSelectSemester": "Семестр",
+  "implementationSelectSemesterPlaceholder": "Выберите семестр",
+  "implementationFilterSemester": "Семестр учебного плана",
+  "implementationFilterCourse": "Курс",
+  "implementationFilterCoursePlaceholder": "Выберите курс",
+  "implementationAllSemesters": "Все семестры",
+  "implementationEmptyHint": "Выберите группу, семестр и курс, чтобы увидеть предметы учебного плана и настроить реализацию.",
+  "implementationDurationWeeks": "Длительность, нед.",
+  "implementationStatus": "Реализация",
+  "implementationStatusNone": "Нет офферинга",
+  "implementationStatusNoSlots": "Нет слотов",
+  "implementationStatusHasSlots": "Слоты настроены",
+  "implementationStatusLessonsGenerated": "Уроки сгенерированы",
+  "implementationConfigure": "Настроить",
+  "implementationOpen": "Открыть",
+  "implementationOfferingDefaults": "Офферинг (по умолчанию)",
+  "implementationTeacher": "Преподаватель",
+  "implementationRoom": "Комната",
+  "implementationFormat": "Формат",
+  "implementationFormatOffline": "Очно",
+  "implementationFormatOnline": "Онлайн",
+  "implementationFormatMixed": "Смешанно",
+  "implementationNotes": "Заметки",
+  "implementationOfferingTeachers": "Преподаватели по ролям",
+  "implementationOfferingTeachersHint": "Роли: LECTURE, PRACTICE, LAB. SEMINAR использует основного преподавателя офферинга.",
+  "implementationAddTeacher": "Добавить",
+  "implementationRole": "Роль",
+  "implementationWeeklySlots": "Недельные слоты",
+  "implementationAddSlot": "Добавить слот",
+  "implementationSlotTime": "Время",
+  "implementationLessonType": "Тип занятия",
+  "implementationLessonTypeLecture": "Лекция",
+  "implementationLessonTypePractice": "Практика",
+  "implementationLessonTypeLab": "Лабораторная",
+  "implementationLessonTypeSeminar": "Семинар",
+  "implementationSeminarHint": "SEMINAR: используется основной преподаватель из офферинга.",
+  "implementationSlotTimeMode": "Способ указания времени",
+  "implementationSlotFromTimeslot": "Из таймслота",
+  "implementationSlotManual": "Вручную",
+  "implementationDayOfWeek": "День недели",
+  "implementationStartTime": "Время начала",
+  "implementationEndTime": "Время окончания",
+  "implementationGenerateLessons": "Генерация уроков",
+  "implementationSemesterReadOnly": "Семестр",
+  "implementationGenerateButton": "Сгенерировать уроки",
+  "implementationRegenerateButton": "Пересгенерировать уроки",
+  "implementationLessonsAlreadyExist": "Уроки по этому офферингу уже созданы. Нажмите «Пересгенерировать», чтобы удалить старые и создать заново.",
+  "implementationGenerateSuccess": "Создано уроков: {{count}}",
+  "implementationRegenerateSuccess": "Пересоздано уроков: {{count}}",
+  "implementationGenerateAllButton": "Сгенерировать все уроки",
+  "implementationGenerateAllSuccess": "Создано уроков по группе: {{count}}",
+  "implementationGenerateAllDisabledHint": "Доступно, когда у всех предметов заданы слоты",
+  "implementationGenerateAllModalTitle": "Генерация уроков по группе",
+  "implementationGenerateAllModalSemester": "Семестр",
+  "implementationGenerateAllModalHint": "Уроки будут созданы только в границах выбранного семестра. У каждого офферинга группы должен быть хотя бы один слот.",
+  "implementationGenerateAllModalSlotsRequired": "Не у всех предметов заданы слоты. Добавьте хотя бы один недельный слот каждому офферингу.",
+  "implementationNoSlotsError": "Добавьте хотя бы один недельный слот перед генерацией уроков.",
+  "implementationDuplicateOffering": "Офферинг для этой группы и предмета уже существует.",
+  "implementationDuplicateSlot": "Слот с таким днём, временем и типом уже есть.",
+  "implementationDuplicateTeacherRole": "Этот преподаватель с такой ролью уже добавлен.",
+  "implementationSave": "Сохранить",
+  "implementationSaving": "Сохранение…",
+  "implementationErrorLoadGroups": "Не удалось загрузить группы",
+  "implementationErrorLoadSemesters": "Не удалось загрузить семестры",
+  "implementationErrorLoadCurriculum": "Не удалось загрузить учебный план",
+  "implementationErrorLoadSubjects": "Не удалось загрузить предметы плана",
+  "implementationErrorLoadOfferings": "Не удалось загрузить офферинги",
+  "implementationLinkFromGroup": "Реализация плана"
 }
