--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -648,5 +648,78 @@
   "timeslotDay4": "周四",
   "timeslotDay5": "周五",
   "timeslotDay6": "周六",
-  "timeslotDay7": "周日"
+  "timeslotDay7": "周日",
+
+  "menuImplementation": "课程实施",
+  "implementationPageTitle": "课程实施",
+  "implementationSelectGroup": "班级",
+  "implementationSelectGroupPlaceholder": "选择班级",
+  "implementationSelectSemester": "学期",
+  "implementationSelectSemesterPlaceholder": "选择学期",
+  "implementationFilterSemester": "教学计划学期",
+  "implementationFilterCourse": "年级",
+  "implementationFilterCoursePlaceholder": "选择年级",
+  "implementationAllSemesters": "全部学期",
+  "implementationEmptyHint": "选择班级、学期和年级以查看课程科目并配置实施。",
+  "implementationDurationWeeks": "周数",
+  "implementationStatus": "实施",
+  "implementationStatusNone": "无开设",
+  "implementationStatusNoSlots": "无时段",
+  "implementationStatusHasSlots": "已设时段",
+  "implementationStatusLessonsGenerated": "已生成课",
+  "implementationConfigure": "配置",
+  "implementationOpen": "打开",
+  "implementationOfferingDefaults": "开设（默认）",
+  "implementationTeacher": "教师",
+  "implementationRoom": "教室",
+  "implementationFormat": "形式",
+  "implementationFormatOffline": "线下",
+  "implementationFormatOnline": "线上",
+  "implementationFormatMixed": "混合",
+  "implementationNotes": "备注",
+  "implementationOfferingTeachers": "按角色教师",
+  "implementationOfferingTeachersHint": "角色：LECTURE、PRACTICE、LAB。SEMINAR 使用开设的主教师。",
+  "implementationAddTeacher": "添加",
+  "implementationRole": "角色",
+  "implementationWeeklySlots": "周时段",
+  "implementationAddSlot": "添加时段",
+  "implementationSlotTime": "时间",
+  "implementationLessonType": "课程类型",
+  "implementationLessonTypeLecture": "讲座",
+  "implementationLessonTypePractice": "实践",
+  "implementationLessonTypeLab": "实验",
+  "implementationLessonTypeSeminar": "研讨",
+  "implementationSeminarHint": "SEMINAR：使用开设的主教师。",
+  "implementationSlotTimeMode": "时间指定方式",
+  "implementationSlotFromTimeslot": "从时间槽",
+  "implementationSlotManual": "手动",
+  "implementationDayOfWeek": "星期",
+  "implementationStartTime": "开始时间",
+  "implementationEndTime": "结束时间",
+  "implementationGenerateLessons": "生成课程",
+  "implementationSemesterReadOnly": "学期",
+  "implementationGenerateButton": "生成课程",
+  "implementationRegenerateButton": "重新生成",
+  "implementationLessonsAlreadyExist": "该开设的课程已存在。点击「重新生成」以替换。",
+  "implementationGenerateSuccess": "已创建课程：{{count}}",
+  "implementationRegenerateSuccess": "已重新生成课程：{{count}}",
+  "implementationGenerateAllButton": "生成所有课程",
+  "implementationGenerateAllSuccess": "已为小组创建课程：{{count}}",
+  "implementationGenerateAllDisabledHint": "当所有科目已设置时段时可用",
+  "implementationGenerateAllModalTitle": "按小组生成课程",
+  "implementationGenerateAllModalSemester": "学期",
+  "implementationGenerateAllModalHint": "课程仅在所选学期范围内创建。每个开设课程至少需有一个时段。",
+  "implementationGenerateAllModalSlotsRequired": "并非所有科目都设置了时段。请为每个开设课程至少添加一个周时段。",
+  "implementationNoSlotsError": "生成课程前请至少添加一个周时段。",
+  "implementationDuplicateOffering": "该班级和科目已有开设。",
+  "implementationDuplicateSlot": "此时段（日/时间/类型）已存在。",
+  "implementationDuplicateTeacherRole": "该教师与此角色已添加。",
+  "implementationSave": "保存",
+  "implementationSaving": "保存中…",
+  "implementationErrorLoadGroups": "加载班级失败",
+  "implementationErrorLoadSemesters": "加载学期失败",
+  "implementationErrorLoadCurriculum": "加载教学计划失败",
+  "implementationErrorLoadSubjects": "加载计划科目失败",
+  "implementationErrorLoadOfferings": "加载开设失败",
+  "implementationLinkFromGroup": "课程实施"
 }
