Add group schedule management features to admin dashboard; implement UI components for displaying weekly lessons, semester information, and navigation controls, enhancing user experience for group scheduling.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -478,6 +478,21 @@
   "groupLeaderFromDate": "From date",
   "groupLeaderToDate": "To date",
   "groupStudentsSelected": "{{count}} selected",
+  "groupTabMembers": "Group members",
+  "groupTabSchedule": "Schedule",
+
+  "scheduleToday": "Today",
+  "schedulePrev": "Prev",
+  "scheduleNext": "Next",
+  "scheduleSemester": "Semester",
+  "scheduleSemesterNotFound": "Semester not found for the selected date.",
+  "scheduleEmptyWeek": "No lessons this week.",
+  "scheduleSlotCancelled": "Cancelled",
+  "scheduleSlotCustom": "Custom",
+  "scheduleLessonTypeLecture": "Lecture",
+  "scheduleLessonTypePractice": "Practice",
+  "scheduleLessonTypeLab": "Lab",
+  "scheduleLessonTypeSeminar": "Seminar",
 
   "menuSystemSettings": "System settings",
   "systemSettingsTitle": "System settings",
