--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -478,6 +478,21 @@
   "groupLeaderFromDate": "Дата начала",
   "groupLeaderToDate": "Дата окончания",
   "groupStudentsSelected": "{{count}} выбрано",
+  "groupTabMembers": "Состав группы",
+  "groupTabSchedule": "Расписание",
+
+  "scheduleToday": "Сегодня",
+  "schedulePrev": "Пред",
+  "scheduleNext": "След",
+  "scheduleSemester": "Семестр",
+  "scheduleSemesterNotFound": "Семестр не найден для выбранной даты.",
+  "scheduleEmptyWeek": "На этой неделе нет занятий.",
+  "scheduleSlotCancelled": "Отменено",
+  "scheduleSlotCustom": "—",
+  "scheduleLessonTypeLecture": "Лекция",
+  "scheduleLessonTypePractice": "Практика",
+  "scheduleLessonTypeLab": "Лаб.",
+  "scheduleLessonTypeSeminar": "Семинар",
 
   "menuSystemSettings": "Настройки системы",
   "systemSettingsTitle": "Настройки системы",
