--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -478,6 +478,21 @@
   "groupLeaderFromDate": "开始日期",
   "groupLeaderToDate": "结束日期",
   "groupStudentsSelected": "已选 {{count}} 项",
+  "groupTabMembers": "小组成员",
+  "groupTabSchedule": "课程表",
+
+  "scheduleToday": "今天",
+  "schedulePrev": "上一周",
+  "scheduleNext": "下一周",
+  "scheduleSemester": "学期",
+  "scheduleSemesterNotFound": "所选日期未找到学期。",
+  "scheduleEmptyWeek": "本周无课程。",
+  "scheduleSlotCancelled": "已取消",
+  "scheduleSlotCustom": "自定义",
+  "scheduleLessonTypeLecture": "讲座",
+  "scheduleLessonTypePractice": "实践",
+  "scheduleLessonTypeLab": "实验",
+  "scheduleLessonTypeSeminar": "研讨",
 
   "menuSystemSettings": "系统设置",
   "systemSettingsTitle": "系统设置",
