Enhance admin dashboard with lesson management features; implement lesson modal for viewing and editing lesson details, integrate room selection, and add success/error handling for lesson updates and deletions, improving user experience in schedule management.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -494,6 +494,40 @@
   "scheduleLessonTypeLab": "Lab",
   "scheduleLessonTypeSeminar": "Seminar",
 
+  "lessonModalTitleFallback": "Lesson",
+  "lessonModalDate": "Date",
+  "lessonModalTime": "Time",
+  "lessonModalStatus": "Status",
+  "lessonModalType": "Type",
+  "lessonModalTeacher": "Teacher",
+  "lessonModalRoom": "Room",
+  "lessonModalTopic": "Topic",
+  "lessonModalStatusPlanned": "Planned",
+  "lessonModalStatusCancelled": "Cancelled",
+  "lessonModalStatusDone": "Done",
+  "lessonModalEdit": "Edit",
+  "lessonModalDelete": "Delete",
+  "lessonModalClose": "Close",
+  "lessonModalDeleteConfirmTitle": "Delete lesson?",
+  "lessonModalDeleteConfirmMessage": "Delete lesson {{subjectName}} on {{date}} {{time}}? This cannot be undone.",
+  "lessonModalSave": "Save",
+  "lessonModalCancel": "Cancel",
+  "lessonModalSuccessSaved": "Changes saved.",
+  "lessonModalSuccessDeleted": "Lesson deleted.",
+  "lessonModalErrorForbidden": "Insufficient permissions.",
+  "lessonModalErrorNotFound": "Lesson not found (may have been deleted).",
+  "lessonModalRoomNone": "—",
+  "lessonModalTopicNone": "—",
+  "lessonModalTeacherNone": "—",
+  "lessonModalTypeCustom": "Custom",
+  "lessonModalSaving": "Saving…",
+  "lessonModalDeleting": "Deleting…",
+  "lessonModalRoomLabel": "Room",
+  "lessonModalStartTime": "Start time",
+  "lessonModalEndTime": "End time",
+  "lessonModalErrorEndAfterStart": "End time must be after start time",
+  "lessonModalDetails": "Details",
+
   "menuSystemSettings": "System settings",
   "systemSettingsTitle": "System settings",
   "systemSettingsSubtitle": "Academic calendar: years and semesters",
