--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -494,6 +494,40 @@
   "scheduleLessonTypeLab": "Лаб.",
   "scheduleLessonTypeSeminar": "Семинар",
 
+  "lessonModalTitleFallback": "Урок",
+  "lessonModalDate": "Дата",
+  "lessonModalTime": "Время",
+  "lessonModalStatus": "Статус",
+  "lessonModalType": "Тип",
+  "lessonModalTeacher": "Преподаватель",
+  "lessonModalRoom": "Аудитория",
+  "lessonModalTopic": "Тема",
+  "lessonModalStatusPlanned": "Запланировано",
+  "lessonModalStatusCancelled": "Отменено",
+  "lessonModalStatusDone": "Проведено",
+  "lessonModalEdit": "Редактировать",
+  "lessonModalDelete": "Удалить",
+  "lessonModalClose": "Закрыть",
+  "lessonModalDeleteConfirmTitle": "Удалить урок?",
+  "lessonModalDeleteConfirmMessage": "Удалить урок {{subjectName}} {{date}} {{time}}? Действие необратимо.",
+  "lessonModalSave": "Сохранить",
+  "lessonModalCancel": "Отмена",
+  "lessonModalSuccessSaved": "Изменения сохранены.",
+  "lessonModalSuccessDeleted": "Урок удалён.",
+  "lessonModalErrorForbidden": "Недостаточно прав.",
+  "lessonModalErrorNotFound": "Урок не найден (возможно удалён).",
+  "lessonModalRoomNone": "—",
+  "lessonModalTopicNone": "—",
+  "lessonModalTeacherNone": "—",
+  "lessonModalTypeCustom": "—",
+  "lessonModalSaving": "Сохранение…",
+  "lessonModalDeleting": "Удаление…",
+  "lessonModalRoomLabel": "Аудитория",
+  "lessonModalStartTime": "Время начала",
+  "lessonModalEndTime": "Время окончания",
+  "lessonModalErrorEndAfterStart": "Время окончания должно быть позже начала",
+  "lessonModalDetails": "Дополнительно",
+
   "menuSystemSettings": "Настройки системы",
   "systemSettingsTitle": "Настройки системы",
   "systemSettingsSubtitle": "Учебный календарь: академические годы и семестры",
