--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -494,6 +494,40 @@
   "scheduleLessonTypeLab": "实验",
   "scheduleLessonTypeSeminar": "研讨",
 
+  "lessonModalTitleFallback": "课程",
+  "lessonModalDate": "日期",
+  "lessonModalTime": "时间",
+  "lessonModalStatus": "状态",
+  "lessonModalType": "类型",
+  "lessonModalTeacher": "教师",
+  "lessonModalRoom": "教室",
+  "lessonModalTopic": "主题",
+  "lessonModalStatusPlanned": "计划中",
+  "lessonModalStatusCancelled": "已取消",
+  "lessonModalStatusDone": "已完成",
+  "lessonModalEdit": "编辑",
+  "lessonModalDelete": "删除",
+  "lessonModalClose": "关闭",
+  "lessonModalDeleteConfirmTitle": "删除课程？",
+  "lessonModalDeleteConfirmMessage": "确定删除课程 {{subjectName}} {{date}} {{time}}？此操作不可撤销。",
+  "lessonModalSave": "保存",
+  "lessonModalCancel": "取消",
+  "lessonModalSuccessSaved": "已保存。",
+  "lessonModalSuccessDeleted": "课程已删除。",
+  "lessonModalErrorForbidden": "权限不足。",
+  "lessonModalErrorNotFound": "未找到课程（可能已被删除）。",
+  "lessonModalRoomNone": "—",
+  "lessonModalTopicNone": "—",
+  "lessonModalTeacherNone": "—",
+  "lessonModalTypeCustom": "自定义",
+  "lessonModalSaving": "保存中…",
+  "lessonModalDeleting": "删除中…",
+  "lessonModalRoomLabel": "教室",
+  "lessonModalStartTime": "开始时间",
+  "lessonModalEndTime": "结束时间",
+  "lessonModalErrorEndAfterStart": "结束时间须晚于开始时间",
+  "lessonModalDetails": "详情",
+
   "menuSystemSettings": "系统设置",
   "systemSettingsTitle": "系统设置",
   "systemSettingsSubtitle": "校历：学年与学期",
