Implement student and teacher dashboard layouts; add routing for schedule pages, integrate new schedule components, and enhance user experience with dedicated layouts for each role. Update API methods for fetching lessons and improve localization support for dashboard elements.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -1,9 +1,14 @@
 {
   "sidebarBrand": "Neusoft",
   "sidebarSubtitle": "Administration",
+  "sidebarSubtitleStudent": "Student Portal",
+  "sidebarSubtitleTeacher": "Teacher Portal",
   "menuDashboard": "Dashboard",
   "menuDepartments": "Departments",
+  "menuSchedule": "Schedule",
   "footerAdmin": "Admin Panel v2.0",
+  "footerStudent": "Student Portal v2.0",
+  "footerTeacher": "Teacher Portal v2.0",
   "headerCreate": "Create",
   "searchPlaceholder": "Search users, groups, subjects...",
   "logout": "logout",
@@ -527,6 +532,9 @@
   "lessonModalEndTime": "End time",
   "lessonModalErrorEndAfterStart": "End time must be after start time",
   "lessonModalDetails": "Details",
+  "lessonModalGroup": "Group",
+  "lessonModalGroupNone": "—",
+  "lessonModalGoToLesson": "Go to lesson",
 
   "menuSystemSettings": "System settings",
   "systemSettingsTitle": "System settings",
