--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -1,9 +1,14 @@
 {
   "sidebarBrand": "Neusoft",
   "sidebarSubtitle": "Администрирование",
+  "sidebarSubtitleStudent": "Студенческий портал",
+  "sidebarSubtitleTeacher": "Портал преподавателя",
   "menuDashboard": "Дашборд",
   "menuDepartments": "Отделы",
+  "menuSchedule": "Расписание",
   "footerAdmin": "Админ-панель v2.0",
+  "footerStudent": "Студенческий портал v2.0",
+  "footerTeacher": "Портал преподавателя v2.0",
   "headerCreate": "Создать",
   "searchPlaceholder": "Поиск пользователей, групп, предметов...",
   "logout": "Выйти",
@@ -527,6 +532,9 @@
   "lessonModalEndTime": "Время окончания",
   "lessonModalErrorEndAfterStart": "Время окончания должно быть позже начала",
   "lessonModalDetails": "Дополнительно",
+  "lessonModalGroup": "Группа",
+  "lessonModalGroupNone": "—",
+  "lessonModalGoToLesson": "Перейти к уроку",
 
   "menuSystemSettings": "Настройки системы",
   "systemSettingsTitle": "Настройки системы",
