--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -1,9 +1,14 @@
 {
   "sidebarBrand": "Neusoft",
   "sidebarSubtitle": "管理",
+  "sidebarSubtitleStudent": "学生门户",
+  "sidebarSubtitleTeacher": "教师门户",
   "menuDashboard": "仪表盘",
   "menuDepartments": "部门",
+  "menuSchedule": "课程表",
   "footerAdmin": "管理面板 v2.0",
+  "footerStudent": "学生门户 v2.0",
+  "footerTeacher": "教师门户 v2.0",
   "headerCreate": "新建",
   "searchPlaceholder": "搜索用户、小组、科目...",
   "logout": "退出",
@@ -527,6 +532,9 @@
   "lessonModalEndTime": "结束时间",
   "lessonModalErrorEndAfterStart": "结束时间须晚于开始时间",
   "lessonModalDetails": "详情",
+  "lessonModalGroup": "小组",
+  "lessonModalGroupNone": "—",
+  "lessonModalGoToLesson": "前往课程",
 
   "menuSystemSettings": "系统设置",
   "systemSettingsTitle": "系统设置",
