Add subjects management page for teachers; implement UI for displaying subjects, semester selection, and error handling. Update routing and API integration for fetching teacher-specific subjects, enhancing the dashboard experience.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -6,6 +6,16 @@
   "menuDashboard": "Dashboard",
   "menuDepartments": "Departments",
   "menuSchedule": "Schedule",
+  "menuTeacherSubjects": "Subjects",
+  "teacherSubjectsTitle": "Subjects",
+  "teacherSubjectsSubtitle": "View all your subjects",
+  "teacherSubjectCode": "Code",
+  "teacherSubjectDepartment": "Department",
+  "teacherSubjectGroups": "Groups",
+  "teacherSubjectsEmpty": "No subjects",
+  "teacherSubjectsErrorLoad": "Could not load subjects",
+  "teacherSubjectsSemesterPlaceholder": "Select semester",
+  "teacherSubjectSemesterLabel": "Semester",
   "footerAdmin": "Admin Panel v2.0",
   "footerStudent": "Student Portal v2.0",
   "footerTeacher": "Teacher Portal v2.0",
