--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -6,6 +6,16 @@
   "menuDashboard": "Дашборд",
   "menuDepartments": "Отделы",
   "menuSchedule": "Расписание",
+  "menuTeacherSubjects": "Предметы",
+  "teacherSubjectsTitle": "Предметы",
+  "teacherSubjectsSubtitle": "Все ваши предметы",
+  "teacherSubjectCode": "Код",
+  "teacherSubjectDepartment": "Кафедра / факультет",
+  "teacherSubjectGroups": "Группы",
+  "teacherSubjectsEmpty": "Нет предметов",
+  "teacherSubjectsErrorLoad": "Не удалось загрузить предметы",
+  "teacherSubjectsSemesterPlaceholder": "Выберите семестр",
+  "teacherSubjectSemesterLabel": "Семестр",
   "footerAdmin": "Админ-панель v2.0",
   "footerStudent": "Студенческий портал v2.0",
   "footerTeacher": "Портал преподавателя v2.0",
