--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -6,6 +6,16 @@
   "menuDashboard": "仪表盘",
   "menuDepartments": "部门",
   "menuSchedule": "课程表",
+  "menuTeacherSubjects": "科目",
+  "teacherSubjectsTitle": "科目",
+  "teacherSubjectsSubtitle": "查看您的所有科目",
+  "teacherSubjectCode": "代码",
+  "teacherSubjectDepartment": "院系",
+  "teacherSubjectGroups": "班级",
+  "teacherSubjectsEmpty": "暂无科目",
+  "teacherSubjectsErrorLoad": "无法加载科目",
+  "teacherSubjectsSemesterPlaceholder": "选择学期",
+  "teacherSubjectSemesterLabel": "学期",
   "footerAdmin": "管理面板 v2.0",
   "footerStudent": "学生门户 v2.0",
   "footerTeacher": "教师门户 v2.0",
